# cm3

./: .env.example  .env.production.template  .gitignore  CLAUDE.md  README.md  deploy.ps1  docker-compose.dev.yml  docker-compose.prod.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 22fb4895ce2f_add_quote_condition_templates.py  5701fe81df0d_initial_schema.py  R1_invoice_role_phase_deductions.py  a1b2c3d4e5f6_add_clients.py  a1b2c3d4e5f6_add_quote_approved_status.py  b3e8f91a2c4d_add_super_admin_role.py  b8c2d4e6f8a1_phase_d_acknowledgments.py  c1d2e3f4a5b6_phase_e_section_templates.py  d1e2f3a4b5c6_phase_f_payments.py  d9f3a2c7e1b8_add_quote_versions_sections.py  e2f3a4b5c6d7_add_qcds_expense_items.py  f1e9c8b7a6d5_add_soft_delete_to_scan.py  g1h2i3j4k5l6_phase_1b_week7_10.py  h2i3j4k5l6m7_stamp_tax_table_type.py  i3j4k5l6m7n8_vendor_name_unique.py  inv_completion_date.py  inv_desc_remarks_fields.py  inv_split_fields_invoice_split.py  invoice_split_v2_type_parent.py  j4k5l6m7n8o9_phase1a_schema.py  k5l6m7n8o9p0_extend_user_roles.py  l6m7n8o9p0q1_add_manager_role_company_settings.py  merge_heads_2026.py  n8o9p0q1r2s3_add_logo_text.py  o9p0q1r2s3t4_add_slack_webhook.py  p0q1r2s3t4u5_add_payment_due_date.py  q1r2s3t4u5v6_add_order_work_content_notes.py  r2s3t4u5v6w7_remove_acknowledged_status.py  (+8 more)
backend/app/: main.py
backend/scripts/: add_quote_template.py  migrate_clients.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_dashboard.py  test_projects.py  test_quotes.py  test_services.py
(+309 files in other folders)
