[project]
name = "cmv3-backend"
version = "0.1.0"
description = "Construction Manager v3 - 株式会社クラップ 工事台帳管理システム"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.12",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "celery[redis]>=5.4.0",
    "aiofiles>=24.1.0",
    "psycopg2-binary>=2.9.0",
    "google-genai>=1.0.0",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
    "openpyxl>=3.1.0",
    "weasyprint>=62.0",
    "jinja2>=3.1.0",
    "pypdf>=4.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N805"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
